# sir-agent-based-modelling

./: README.md  agent_based_disease_modelling.ipynb  modelling_a_pandemic.ipynb  pyproject.toml
